# bevy_editor_prototypes

./: PR-proto-bsn-better-syntax.md
crates/bevy_bsn/: Cargo.toml
crates/bevy_bsn/examples/: bsn_asset_hot.rs  bsn_macro_hot_reload.rs  bsn_retained.rs
crates/bevy_bsn/src/: bsn_reflect.rs  construct_reflect.rs  dynamic.rs  entity_patch.rs  lib.rs  patch.rs  retain.rs
crates/bevy_bsn/src/ast/: Cargo.toml
crates/bevy_bsn/src/ast/src/: lib.rs
crates/bevy_bsn/src/hot_reload/: hot_patch.rs  mod.rs  rs_file.rs  visit.rs
crates/bevy_bsn/src/macros/: Cargo.toml
crates/bevy_bsn/src/macros/src/: bsn.rs
crates/bevy_proto_bsn/: Cargo.toml
crates/bevy_proto_bsn/assets/: 3d_scene.proto_bsn  3d_scene_child.proto_bsn  hello.proto_bsn
crates/bevy_proto_bsn/examples/: bsn_edit.rs  bsn_hot_macro.rs  bsn_macro.rs  bsn_macro_hot_reload.rs  bsn_retained_sheep.rs
crates/bevy_proto_bsn/src/: bsn_asset.rs  bsn_helpers.rs  bsn_reflect.rs  dynamic.rs  entity_patch.rs  lib.rs  retain.rs
crates/bevy_proto_bsn/src/ast/: Cargo.toml
crates/bevy_proto_bsn/src/ast/src/: lib.rs
crates/bevy_proto_bsn/src/hot_macro/: hot_patch.rs  mod.rs  rs_file.rs  visit.rs
crates/bevy_proto_bsn/src/hot_reload/: hot_patch.rs  mod.rs  visit.rs
crates/bevy_proto_bsn/src/macros/: Cargo.toml
crates/bevy_proto_bsn/src/macros/src/: bsn.rs  lib.rs
