[package]
name = "bevy_bsn"
version = "0.1.0"
edition = "2021"

[features]
default = []
hot_reload = [
    'bevy_bsn_macros/hot_reload',
    'bevy_bsn_ast/visit',
    'bevy_bsn_ast/hash',
    'bevy/file_watcher',
    'bevy/multi_threaded',
]

[dependencies]
bevy_bsn_ast = { path = "src/ast", version = "0.1.0" }
bevy_bsn_macros = { path = "src/macros", version = "0.1.0" }

bevy = { workspace = true }
thiserror = { workspace = true }
variadics_please = { workspace = true }

[lints]
workspace = true

[[example]]
name = "bsn_asset_hot"
required-features = ["bevy/file_watcher"]

[[example]]
name = "bsn_macro_hot_reload"
required-features = ["hot_reload"]
